deploy: 6ddcb5bce2eb5e0fa5f74f140fa131e2bf914182

--- a/contents/unsupervised/01-kmeans.html
+++ b/contents/unsupervised/01-kmeans.html
@@ -584,7 +584,7 @@ window.Quarto = {
 <li><p>Les observations au sein d’un même groupe soient les plus similaires possible (dans un certain sens).</p></li>
 <li><p>Les observations appartenant à des groupes différents soient les moins similaires possible.</p></li>
 </ol>
-<p>Autrement dit, nous cherchons une fonction de classication : <span class="math display">\[C: \{ 1, \dots, n \} \to \{ 1, \dots, K \}\]</span> qui, à chaque observation <span class="math inline">\(i \in \{ 1, \dots, n \}\)</span> associe une étiquette de groupe <span class="math inline">\(C(i) \in \{ 1, \dots, K \}\)</span>.</p>
+<p>Autrement dit, nous cherchons une fonction de classification : <span class="math display">\[C: \{ 1, \dots, n \} \to \{ 1, \dots, K \}\]</span> qui, à chaque observation <span class="math inline">\(i \in \{ 1, \dots, n \}\)</span> associe une étiquette de groupe <span class="math inline">\(C(i) \in \{ 1, \dots, K \}\)</span>.</p>
 <div class="callout callout-style-default callout-warning no-icon callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
