deploy: 9d1d2e1630881d6e7da9ac8945a631aca4db333b

--- a/contents/generalities/04-bias-variance.html
+++ b/contents/generalities/04-bias-variance.html
@@ -1098,7 +1098,7 @@ Preuve
 <span id="cb7-607"><a href="#cb7-607" aria-hidden="true" tabindex="-1"></a>    )<span class="op">,</span></span>
 <span id="cb7-608"><a href="#cb7-608" aria-hidden="true" tabindex="-1"></a>  ]</span>
 <span id="cb7-609"><a href="#cb7-609" aria-hidden="true" tabindex="-1"></a>})</span></code><button title="Copier vers le presse-papier" class="code-copy-button"><i class="bi"></i></button></pre></div>
-</details><div id="fig-plot-html" class="cell quarto-float quarto-figure quarto-figure-center anchored" data-eval="true" data-warning="false">
+</details><div id="fig-plot-html" class="cell quarto-float quarto-figure quarto-figure-center anchored" data-warning="false" data-eval="true">
 <figure class="quarto-float quarto-float-fig figure"><div aria-describedby="fig-plot-html-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="cell-output cell-output-display">
 <div id="fig-plot-html-1" class="quarto-float quarto-figure quarto-figure-center anchored">
