--- a/contents/dimension/02-mca.html
+++ b/contents/dimension/02-mca.html
@@ -552,8 +552,13 @@ window.Quarto = {
   <li><a href="#profils-lignes-et-profils-colonnes" id="toc-profils-lignes-et-profils-colonnes" class="nav-link" data-scroll-target="#profils-lignes-et-profils-colonnes">Profils-lignes et profils-colonnes</a></li>
   </ul>
 </li>
-  <li><a href="#analyse-factorielle-des-correspondances" id="toc-analyse-factorielle-des-correspondances" class="nav-link" data-scroll-target="#analyse-factorielle-des-correspondances">Analyse factorielle des correspondances</a></li>
-  <li><a href="#centre-de-gravit%C3%A9-et-inertie" id="toc-centre-de-gravité-et-inertie" class="nav-link" data-scroll-target="#centre-de-gravité-et-inertie">Centre de gravité et inertie</a></li>
+  <li>
+<a href="#analyse-factorielle-des-correspondances" id="toc-analyse-factorielle-des-correspondances" class="nav-link" data-scroll-target="#analyse-factorielle-des-correspondances">Analyse factorielle des correspondances</a>
+  <ul class="collapse">
+<li><a href="#centre-de-gravit%C3%A9-et-inertie" id="toc-centre-de-gravité-et-inertie" class="nav-link" data-scroll-target="#centre-de-gravité-et-inertie">Centre de gravité et inertie</a></li>
+  <li><a href="#coordonn%C3%A9es-factorielles-et-inertie" id="toc-coordonnées-factorielles-et-inertie" class="nav-link" data-scroll-target="#coordonnées-factorielles-et-inertie">Coordonnées factorielles et inertie</a></li>
+  </ul>
+</li>
   <li><a href="#analyse-des-correspondances-multiples" id="toc-analyse-des-correspondances-multiples" class="nav-link" data-scroll-target="#analyse-des-correspondances-multiples">Analyse des correspondances multiples</a></li>
   </ul>
 <div class="toc-actions"><ul>
@@ -645,7 +650,8 @@ Remarque
 </div>
 <p>L’analyse des profils-lignes s’appelle l’analyse directe. On considère les profils-lignes contenus dans la matrice <span class="math inline">\(D_n^{-1}F \in \mathbb{R}^{n \times p}\)</span>. On projette les profils-lignes dans un espace muni de la métrique du <span class="math inline">\(\chi^2\)</span> sur les colonnes, définie par <span class="math display">\[\left\langle x, y \right\rangle = x^{\top} D_p^{-1} y.\]</span></p>
 <p>L’analyse des profils-colonnes s’appelle l’analyse duale. On considère les profils-colonnes contenus dans la matrice <span class="math inline">\(D_p^{-1} F^{\top} \in \mathbb{R}^{p \times n}\)</span>. On projette les profils-colonnes dans un espace muni de la métrique du <span class="math inline">\(\chi^2\)</span> sur les lignes, définie par <span class="math display">\[\left\langle x, y \right\rangle = x^{\top} D_n^{-1} y.\]</span></p>
-<p>Pour l’analyse directe, on cherche le premier axe factoriel, i.e. la direction <span class="math inline">\(u \in R^p\)</span> qui maximise la variance projetée des profils-lignes, sous contrainte que <span class="math inline">\(u\)</span> soit normé. On cherche donc <span class="math display">\[\max_{u} = u^{\top} D_p^{-1} F^{\top} D_n^{-1} F D_p^{-1} u, \quad\text{s.c.}\quad u^{\top} D_p^{-1} u = 1.\]</span> Ce problème d’optimisation revient à chercher le premier vecteur propre de la matrice <span class="math display">\[S = F^{\top} D_n^{-1} F D_p^{-1}.\]</span> La matrice <span class="math inline">\(S\)</span> joue un rôle analogue à la matrice de covariance dans l’ACP. L’analyse duale se fait de façon similaire. On cherche le premier vecteur propre de la matrice <span class="math display">\[T = F D_p^{-1} F^{\top} D_n^{-1}.\]</span> Les vecteurs propres de la matrice <span class="math inline">\(T\)</span> donnent les axes factoriels dans l’espace des lignes.</p>
+<p>Pour l’analyse directe, on cherche le premier axe factoriel, i.e. la direction <span class="math inline">\(u \in R^p\)</span> qui maximise la variance projetée des profils-lignes, sous contrainte que <span class="math inline">\(u\)</span> soit normé. On cherche donc <span class="math display">\[\max_{u} = u^{\top} D_p^{-1} F^{\top} D_n^{-1} F D_p^{-1} u, \quad\text{s.c.}\quad u^{\top} D_p^{-1} u = 1.\]</span> Ce problème d’optimisation revient à chercher le premier vecteur propre de la matrice <span class="math display">\[S = F^{\top} D_n^{-1} F D_p^{-1}.\]</span> La matrice <span class="math inline">\(S\)</span> joue un rôle analogue à la matrice de covariance dans l’ACP. Le premier vecteur propre <span class="math inline">\(u_1\)</span> vérifie donc la relation <span class="math display">\[S u_{1} = F^{\top} D_n^{-1} F D_p^{-1} u_1 = \lambda_{1} u_1,\]</span> avec <span class="math inline">\(\lambda_1\)</span> la valeur propre associée à <span class="math inline">\(u_1\)</span>. Les coordonnées des profils-lignes sur le premier axe factoriel sont obtenues par la relation</p>
+<p>L’analyse duale se fait de façon similaire. On cherche le premier vecteur propre de la matrice <span class="math display">\[T = F D_p^{-1} F^{\top} D_n^{-1}.\]</span> Les vecteurs propres de la matrice <span class="math inline">\(T\)</span> donnent les axes factoriels dans l’espace des lignes.</p>
 <div class="callout callout-style-default callout-tip no-icon callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
@@ -663,16 +669,45 @@ Remarques
 </ol>
 </div>
 </div>
-</section><section id="centre-de-gravité-et-inertie" class="level2"><h2 class="anchored" data-anchor-id="centre-de-gravité-et-inertie">Centre de gravité et inertie</h2>
+<section id="centre-de-gravité-et-inertie" class="level3"><h3 class="anchored" data-anchor-id="centre-de-gravité-et-inertie">Centre de gravité et inertie</h3>
 <p>Dans les sorties des logiciels de statistique, le nuage des points issus d’une AFC est généralement centré en <span class="math inline">\((0, 0)\)</span>. Cette convention reflète une analysis relative aux centres de gravité des profils-lignes et des profils-colonnes. Ce centrage est à la fois pratique et interprétable. En effet, il fait apparaître les distances entre les modalités par rapport à leur moyenne poindérée, i.e. par rapport au comportement moyen dans la population.</p>
 <p>Chaque modalité (ligne ou colonne) est associée à un poids, correspondant à sa fréquence marginale : le poids de la <span class="math inline">\(i\)</span>e ligne est <span class="math inline">\(f_{i \bullet}\)</span> et le poids de la <span class="math inline">\(j\)</span>e colonne est <span class="math inline">\(f_{\bullet j}\)</span>. Le centre de gravité des lignes est la moyenne pondérée des profils-lignes :</p>
-<p><span class="math display">\[G_L = \left( g_{1}, \dots, g_{p} \right)^{top}, \quad \text{où}\quad g_j = \sum_{i = 1}^{n} f_{i \bullet} \frac{f_{i j}}{f_{i \bullet}} = \sum_{i = 1}^{n} f_{i j} = f_{\bullet j}, j \in \{ 1, \dots, p \}.\]</span></p>
-<p>De même, le centre de gravité des colonnes est <span class="math display">\[G_C = \left( f_{1 \bullet}, \dots, f_{n \bullet} \right)^{top}.\]</span></p>
+<p><span class="math display">\[G_L = \left( g_{1}, \dots, g_{p} \right)^{\top}, \quad \text{où}\quad g_j = \sum_{i = 1}^{n} f_{i \bullet} \frac{f_{i j}}{f_{i \bullet}} = \sum_{i = 1}^{n} f_{i j} = f_{\bullet j}, j \in \{ 1, \dots, p \}.\]</span></p>
+<p>De même, le centre de gravité des colonnes est <span class="math display">\[G_C = \left( f_{1 \bullet}, \dots, f_{n \bullet} \right)^{\top}.\]</span></p>
 <p>Pour recentrer les profils autour du centre de gravité, on soustrait leur valeur moyenne : <span class="math display">\[\frac{f_{i j}}{f_{i \bullet}} - g_{j} = \frac{f_{i j}}{f_{i \bullet}} - f_{\bullet j} = \frac{f_{i j} - f_{i \bullet} f_{\bullet j}}{f_{i \bullet}}.\]</span> Ce centrage garantit que chaque profil-ligne <span class="math inline">\(i \in \{ 1, \dots, n \}\)</span> est moyenné à zéro : <span class="math display">\[\sum_{j = 1}^{p} \frac{f_{i j} - f_{i \bullet}f_{\bullet j}}{f_{i \bullet}} = 0.\]</span></p>
-<p>L’AFC ne se fait donc plus sur <span class="math inline">\(S\)</span> mais plutôt sur une matrice centrée <span class="math inline">\(S^\star = (s_{j j^\prime}^\star),\)</span> où <span class="math display">\[s_{j j^\prime}^\star = \sum_{i = 1}^{n} \frac{\left( f_{i j} - f_{i \bullet} f_{\bullet j} \right) \left( f_{i j^\prime} - f_{i \bullet} f_{\bullet j^\prime} \right)}{f_{i \bullet} f_{\bullet j^\prime}}.\]</span></p>
-<p>Par définition, <span class="math display">\[\text{tr}(S^\star) = \sum_{j = 1}^{p} \sum_{i = 1}^{n} \frac{\left( f_{i j} - f_{i \bullet}f_{\bullet j} \right)^2}{f_{i \bullet} f_{\bullet j}}.\]</span></p>
-<p>On retrouve l’expression de la statistique du <span class="math inline">\(\chi^2\)</span> servant à tester l’indépendance entre deux variables.</p>
-<p>On peut prouver que <span class="math inline">\(s_{j j^\prime}^\star = s_{j j^\prime} - f_{\bullet j},\)</span> où <span class="math display">\[s_{j j^\prime} = \sum_{i = 1}^{n} \frac{f_{i j}f_{i j^\prime}}{f_{i \bullet} f_{\bullet j^\prime}}.\]</span> Ceci entraîne que ces deux matrices ont les mêmes <span class="math inline">\(p\)</span> premiers vecteurs propres normalisés.</p>
+<p>L’AFC ne se fait donc plus sur la matrice <span class="math inline">\(S\)</span> mais plutôt sur une matrice centrée <span class="math inline">\(S^\star = (s_{j j^\prime}^\star),\)</span> où <span class="math display">\[s_{j j^\prime}^\star = \sum_{i = 1}^{n} \frac{\left( f_{i j} - f_{i \bullet} f_{\bullet j} \right) \left( f_{i j^\prime} - f_{i \bullet} f_{\bullet j^\prime} \right)}{f_{i \bullet} f_{\bullet j^\prime}}.\]</span></p>
+<p>Par définition, la trace de la matrice <span class="math inline">\(S^\star\)</span> donne l’inertie totale : <span class="math display">\[\text{tr}(S^\star) = \sum_{j = 1}^{p} \sum_{i = 1}^{n} \frac{\left( f_{i j} - f_{i \bullet}f_{\bullet j} \right)^2}{f_{i \bullet} f_{\bullet j}}.\]</span> Celle-ci correspond à la statistique du <span class="math inline">\(\chi^2\)</span> normalisée que l’on utilise pour tester l’indépendance entre les variables.</p>
+<div class="callout callout-style-default callout-important no-icon callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Propriété
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>On a que, pour tout <span class="math inline">\(j, j^\prime \in \{ 1, \dots, p \}\)</span>, <span class="math inline">\(s_{j j^\prime}^\star = s_{j j^\prime} - f_{\bullet j},\)</span> où <span class="math display">\[s_{j j^\prime} = \sum_{i = 1}^{n} \frac{f_{i j}f_{i j^\prime}}{f_{i \bullet} f_{\bullet j^\prime}}.\]</span></p>
+</div>
+</div>
+<div class="callout callout-style-default callout-tip no-icon callout-titled">
+<div class="callout-header d-flex align-content-center" data-bs-toggle="collapse" data-bs-target=".callout-5-contents" aria-controls="callout-5" aria-expanded="false" aria-label="Toggle callout">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Preuve
+</div>
+<div class="callout-btn-toggle d-inline-block border-0 py-1 ps-1 pe-0 float-end"><i class="callout-toggle"></i></div>
+</div>
+<div id="callout-5" class="callout-5-contents callout-collapse collapse">
+<div class="callout-body-container callout-body">
+
+</div>
+</div>
+</div>
+<p>La propriété précédente entraine que les matrices <span class="math inline">\(S\)</span> et <span class="math inline">\(S^\star\)</span> one les mêmes vecteurs propres pour les <span class="math inline">\(p\)</span> premières dimensions, ce qui permet d’effectuer l’analyse factorielle sur la version centrée.</p>
+</section><section id="coordonnées-factorielles-et-inertie" class="level3"><h3 class="anchored" data-anchor-id="coordonnées-factorielles-et-inertie">Coordonnées factorielles et inertie</h3>
 <p>Coordonnées des points-lignes. La projection du <span class="math inline">\(i\)</span>e point-ligne sur l’axe <span class="math inline">\(j\)</span> est donnée par <span class="math display">\[\left( D_n^{-1} F \phi_j \right)_i = \frac{1}{f_{i \bullet}} \sum_{j^\prime = 1}^{p} f_{i j^\prime} \phi_{j j^\prime} = \sqrt{\lambda_j} \Psi_{j i} \equiv \widehat{\Psi}_{j i}.\]</span> De plus, <span class="math display">\[\sum_{i = 1}^{n} f_{i \bullet} \widehat{\Psi}^2_{j i} = \sum_{i = 1}^{n} f_{i \bullet} \left( \sqrt{\lambda_j} \Psi_{j i} \right)^2 = \lambda_j.\]</span></p>
 <p>Coordonnées des point-colonne. La projection du <span class="math inline">\(k\)</span>e point-ligne sur l’axe <span class="math inline">\(j\)</span> est donnée par <span class="math display">\[\left( D_p^{-1} F^{\top} \psi_j \right)_k = \frac{1}{f_{\bullet k}} \sum_{i = 1}^{n} f_{i k} \psi_{j i} = \sqrt{\lambda_j} \Phi_{j k} \equiv \widehat{\Phi}_{j k}.\]</span> De plus, <span class="math display">\[\sum_{k = 1}^{p} f_{\bullet k} \widehat{\Phi}^2_{j k} = \sum_{k = 1}^{p} f_{\bullet k} \left( \sqrt{\lambda_j} \Phi_{j k} \right)^2 = \lambda_j.\]</span></p>
 <p>L’inertie absolue du <span class="math inline">\(i\)</span>e point-ligne sur l’axe <span class="math inline">\(j\)</span> est <span class="math inline">\(f_{i \bullet}\widehat{\Psi}_{j i}^2\)</span>. L’inertie relative du <span class="math inline">\(i\)</span>e point-ligne sur l’axe <span class="math inline">\(j\)</span> est <span class="math display">\[\frac{f_{i \bullet} \widehat{\Psi}_{j i}^2}{\lambda_j}.\]</span></p>
@@ -685,7 +720,7 @@ Remarques
 <li><p>Ceci ne signifie pas pour autant que les points sont près du centre du graphique.</p></li>
 <li><p>Les points éloignés du centre de gravité se distinguent du centre de gravité.</p></li>
 <li><p>Une interprétation semblable existe pour les points-lignes.</p></li>
-</ol></section><section id="analyse-des-correspondances-multiples" class="level2"><h2 class="anchored" data-anchor-id="analyse-des-correspondances-multiples">Analyse des correspondances multiples</h2>
+</ol></section></section><section id="analyse-des-correspondances-multiples" class="level2"><h2 class="anchored" data-anchor-id="analyse-des-correspondances-multiples">Analyse des correspondances multiples</h2>
 <p>L’analyse des correspondances multiples est une généralisation de l’analyse des correspondances binaires. Elle permet la representation graphique de tableaux de fréquences contnant plus de deux variables. Un exemple classique d’un tableau de fréquences avec plus de deux variables est le tableau présentant les réponses d’individus à un questionnaire contenant <span class="math inline">\(Q\)</span> questions à choix multiples.</p>
 <p>Très utile pour visualiser les résultats d’une étude par questionnaire.</p>
 <p>L’ACM peut aussi être vue comme une version de l’ACP quand les variables sont catégorielles:</p>
