--- a/contents/dimension/02-mca.html
+++ b/contents/dimension/02-mca.html
@@ -650,23 +650,48 @@ Remarque
 </div>
 <p>L’analyse des profils-lignes s’appelle l’analyse directe. On considère les profils-lignes contenus dans la matrice <span class="math inline">\(D_n^{-1}F \in \mathbb{R}^{n \times p}\)</span>. On projette les profils-lignes dans un espace muni de la métrique du <span class="math inline">\(\chi^2\)</span> sur les colonnes, définie par <span class="math display">\[\left\langle x, y \right\rangle = x^{\top} D_p^{-1} y.\]</span></p>
 <p>L’analyse des profils-colonnes s’appelle l’analyse duale. On considère les profils-colonnes contenus dans la matrice <span class="math inline">\(D_p^{-1} F^{\top} \in \mathbb{R}^{p \times n}\)</span>. On projette les profils-colonnes dans un espace muni de la métrique du <span class="math inline">\(\chi^2\)</span> sur les lignes, définie par <span class="math display">\[\left\langle x, y \right\rangle = x^{\top} D_n^{-1} y.\]</span></p>
-<p>Pour l’analyse directe, on cherche le premier axe factoriel, i.e. la direction <span class="math inline">\(u \in R^p\)</span> qui maximise la variance projetée des profils-lignes, sous contrainte que <span class="math inline">\(u\)</span> soit normé. On cherche donc <span class="math display">\[\max_{u} = u^{\top} D_p^{-1} F^{\top} D_n^{-1} F D_p^{-1} u, \quad\text{s.c.}\quad u^{\top} D_p^{-1} u = 1.\]</span> Ce problème d’optimisation revient à chercher le premier vecteur propre de la matrice <span class="math display">\[S = F^{\top} D_n^{-1} F D_p^{-1}.\]</span> La matrice <span class="math inline">\(S\)</span> joue un rôle analogue à la matrice de covariance dans l’ACP. Le premier vecteur propre <span class="math inline">\(u_1\)</span> vérifie donc la relation <span class="math display">\[S u_{1} = F^{\top} D_n^{-1} F D_p^{-1} u_1 = \lambda_{1} u_1,\]</span> avec <span class="math inline">\(\lambda_1\)</span> la valeur propre associée à <span class="math inline">\(u_1\)</span>. Les coordonnées des profils-lignes sur le premier axe factoriel sont obtenues par la relation</p>
-<p>L’analyse duale se fait de façon similaire. On cherche le premier vecteur propre de la matrice <span class="math display">\[T = F D_p^{-1} F^{\top} D_n^{-1}.\]</span> Les vecteurs propres de la matrice <span class="math inline">\(T\)</span> donnent les axes factoriels dans l’espace des lignes.</p>
+<p>Pour l’analyse directe, on cherche le premier axe factoriel, i.e. la direction <span class="math inline">\(u \in R^p\)</span> qui maximise la variance projetée des profils-lignes, sous contrainte que <span class="math inline">\(u\)</span> soit normé. On cherche donc <span class="math display">\[\max_{u} = u^{\top} D_p^{-1} F^{\top} D_n^{-1} F D_p^{-1} u, \quad\text{s.c.}\quad u^{\top} D_p^{-1} u = 1.\]</span> Ce problème d’optimisation revient à chercher le premier vecteur propre de la matrice <span class="math display">\[S = F^{\top} D_n^{-1} F D_p^{-1}.\]</span> La matrice <span class="math inline">\(S\)</span> joue un rôle analogue à la matrice de covariance dans l’ACP. Le premier vecteur propre <span class="math inline">\(u_1\)</span> vérifie donc la relation <span class="math display">\[S u_{1} = F^{\top} D_n^{-1} F D_p^{-1} u_1 = \lambda_{1} u_1,\]</span> avec <span class="math inline">\(\lambda_1\)</span> la valeur propre associée à <span class="math inline">\(u_1\)</span>. Les vecteurs propres de la matrice <span class="math inline">\(S\)</span> donnent les axes factoriels dans l’espace des colonnes. Les coordonnées des profils-lignes sur le premier axe factoriel sont obtenues par la relation <span class="math display">\[\Phi_1 = D_n^{-1} F D_p^{-1} u_1.\]</span> On obtient les autres couples de valeurs propres et vecteurs propres, ainsi que les coordonnées des profils-lignes sur les axes factoriels associés de manière similaire.</p>
+<p>L’analyse duale se fait de façon similaire. On cherche le premier vecteur propre de la matrice <span class="math display">\[T = F D_p^{-1} F^{\top} D_n^{-1}.\]</span> Le premier vecteur propre <span class="math inline">\(v_1\)</span> vérifie donc la relation <span class="math display">\[T v_{1} = F D_p^{-1} F^{\top} D_n^{-1} v_1 = \mu_1 v_1,\]</span> avec <span class="math inline">\(\mu_{1}\)</span> la valeur propre associée à <span class="math inline">\(v_{1}\)</span>. Les vecteurs propres de la matrice <span class="math inline">\(T\)</span> donnent les axes factoriels dans l’espace des lignes. Les coordonnées des profils-colonnes sur le premier axe factoriel sont obtenues par la relation <span class="math display">\[\Psi_1 = D_p^{-1} F^{\top} D_n^{-1} v_1 .\]</span> On obtient les autres couples de valeurs propres et vecteurs propres, ainsi que les coordonnées des profils-colonnes sur les axes factoriels associés de manière similaire.</p>
+<div class="callout callout-style-default callout-important no-icon callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Propriété
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>Les matrices <span class="math inline">\(S\)</span> et <span class="math inline">\(T\)</span> ont les mêmes <span class="math inline">\(r = \min(n - 1, p - 1)\)</span> premières valeurs propres positives. Cela garantit une représentation cohérente des lignes et des colonnes dans le mêmes espace réduit. Pour <span class="math inline">\(k = 1, \dots, r\)</span>, les relations entre les vecteurs propres <span class="math inline">\(u_k\)</span> et <span class="math inline">\(v_k\)</span> sont <span class="math display">\[u_k = \frac{1}{\sqrt{\lambda_k}} F^{\top} D_n^{-1} v_k \quad \text{et} \quad v_k = \frac{1}{\sqrt{\lambda_k}} F D_p^{-1} u_k.\]</span></p>
+</div>
+</div>
+<div class="callout callout-style-default callout-tip no-icon callout-titled">
+<div class="callout-header d-flex align-content-center" data-bs-toggle="collapse" data-bs-target=".callout-4-contents" aria-controls="callout-4" aria-expanded="false" aria-label="Toggle callout">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Preuve
+</div>
+<div class="callout-btn-toggle d-inline-block border-0 py-1 ps-1 pe-0 float-end"><i class="callout-toggle"></i></div>
+</div>
+<div id="callout-4" class="callout-4-contents callout-collapse collapse">
+<div class="callout-body-container callout-body">
+<p>En partant de l’équation <span class="math display">\[T v_{1} = F D_p^{-1} F^{\top} D_n^{-1} v_1 = \mu_1 v_1,\]</span> en multipliant à gauche par <span class="math inline">\(F^{\top} D_n^{-1}\)</span>, on obtient : <span class="math display">\[F^{\top} D_n^{-1} F D_p^{-1} F^{\top} D_n^{-1} v_1 = \mu_1 F^{\top} D_n^{-1} v_1.\]</span> Ainsi le vecteur <span class="math inline">\(F^{\top} D_n^{-1} v_1\)</span> est un vecteur propre de la matrice <span class="math inline">\(F^{\top} D_n^{-1} F D_p^{-1}\)</span> associée à la valeur propre <span class="math inline">\(\mu_1\)</span>. Comme <span class="math inline">\(\lambda_1\)</span> est la plus grande valeur propre de <span class="math inline">\(F^{\top} D_n^{-1} F D_p^{-1}\)</span>, on en déduit que <span class="math inline">\(\mu_1 \leq \lambda_{1}\)</span>. En procédant de la même manière, en partant de <span class="math inline">\(S u_1 = \lambda_{1} u_{1}\)</span>, on déduit que <span class="math inline">\(\lambda_{1} \leq \mu_{1}\)</span>. Donc <span class="math inline">\(\lambda_{1} = \mu_{1}\)</span>. On peut ensuite faire de même pour les <span class="math inline">\(r\)</span> premières valeurs propres. On en déduit aussi les relations entre les valeurs propres.</p>
+</div>
+</div>
+</div>
 <div class="callout callout-style-default callout-tip no-icon callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
 <i class="callout-icon no-icon"></i>
 </div>
 <div class="callout-title-container flex-fill">
-Remarques
+Remarque
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<ol type="1">
-<li><p>Les matrices <span class="math inline">\(S\)</span> et <span class="math inline">\(T\)</span> sont les mêmes <span class="math inline">\(r = \min(n - 1, p - 1)\)</span> premières valeurs propres positives. Cela garantit une représentation cohérente des lignes et des colonnes dans le mêmes espace réduit.</p></li>
-<li><p>En centrant les profils, on peut projeter les profils-lignes et les profils-colonnes dans un même repère, facilitant ainsi l’interprétation géométrique conjointe.</p></li>
-<li><p>Les coordonnées factorielles des modalités sont obtenues à partir des vecteurs propres et des valeurs propres, mais leurs formules sont souvent complexes. Ce sont surtout les distances et les angles dans le plan factoriel qui importent pour l’analyse.</p></li>
-</ol>
+<p>En centrant les profils, on peut projeter les profils-lignes et les profils-colonnes dans un même repère, facilitant ainsi l’interprétation géométrique conjointe.</p>
 </div>
 </div>
 <section id="centre-de-gravité-et-inertie" class="level3"><h3 class="anchored" data-anchor-id="centre-de-gravité-et-inertie">Centre de gravité et inertie</h3>
@@ -691,7 +716,7 @@ Propriété
 </div>
 </div>
 <div class="callout callout-style-default callout-tip no-icon callout-titled">
-<div class="callout-header d-flex align-content-center" data-bs-toggle="collapse" data-bs-target=".callout-5-contents" aria-controls="callout-5" aria-expanded="false" aria-label="Toggle callout">
+<div class="callout-header d-flex align-content-center" data-bs-toggle="collapse" data-bs-target=".callout-7-contents" aria-controls="callout-7" aria-expanded="false" aria-label="Toggle callout">
 <div class="callout-icon-container">
 <i class="callout-icon no-icon"></i>
 </div>
@@ -700,7 +725,7 @@ Preuve
 </div>
 <div class="callout-btn-toggle d-inline-block border-0 py-1 ps-1 pe-0 float-end"><i class="callout-toggle"></i></div>
 </div>
-<div id="callout-5" class="callout-5-contents callout-collapse collapse">
+<div id="callout-7" class="callout-7-contents callout-collapse collapse">
 <div class="callout-body-container callout-body">
 
 </div>
